[gd_scene load_steps=3 format=3 uid="uid://cqumikk4ytxwb"]

[ext_resource type="Script" path="res://Scripts/UI/options.gd" id="1_071d1"]
[ext_resource type="Texture2D" uid="uid://c0q3hqln10gid" path="res://Sprites/Backgrounds/FantasyCaves/background1.png" id="2_0l8sl"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_071d1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(330, 181)
scale = Vector2(0.76, 0.8)
texture = ExtResource("2_0l8sl")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -88.0
offset_right = 236.0
offset_bottom = 88.0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Setting1" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
button_pressed = true
text = "SETTING_1"

[node name="Language" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Русский"
popup/item_1/id = 1

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BACKWARD"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Language" to="." method="_on_language_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
